# tryparse

./: .gitignore  Cargo.toml  README.md
tryparse/: Cargo.toml
tryparse-derive/: Cargo.toml  README.md
tryparse-derive/src/: lib.rs
tryparse-derive/tests/: derive_tests.rs
tryparse/examples/: debug_json_fixes.rs  schema_aware_parsing.rs  schema_basics.rs  schema_with_derive.rs  test_prose_extraction.rs  test_unquoted_values.rs
tryparse/src/: constraints.rs  error.rs  lib.rs  schema.rs  scoring.rs  value.rs
tryparse/src/deserializer/: enum_coercer.rs  mod.rs  primitives.rs  struct_coercer.rs  traits.rs  union_coercer.rs
tryparse/src/parser/: candidate.rs  cleaner.rs  mod.rs  state_machine.rs
tryparse/src/parser/strategies/: direct_json.rs  extractor.rs  heuristic.rs  json_fixer.rs  markdown.rs  mod.rs  multiple_objects.rs  raw_primitive.rs  state_machine_strategy.rs  yaml.rs
tryparse/tests/: brutal_reality.rs  derive_test.rs  integration_test.rs  integration_tests.rs  reality_check.rs  test_architectural_flaw.rs  test_baml_basics.rs  test_baml_class.rs  test_case_insensitive.rs  test_constraints.rs  test_double_escaped.rs  test_extraction_fixing.rs  test_field_norm.rs  test_implied_key.rs  test_invisible_chars.rs  test_mixed_quotes.rs  test_normalize_direct.rs  test_parser_json.rs  test_parser_primitives.rs  test_percentage.rs  test_scientific_notation.rs  test_snake_case.rs  test_template_literals.rs  test_transformation_tracking.rs  test_yaml.rs
