[workspace]
members = [
    "tryparse",
    "tryparse-derive",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["TryParse Contributors"]
license = "Apache-2.0"
repository = "https://github.com/microagents/tryparse"
readme = "README.md"
keywords = ["json", "parser", "llm", "serde", "lenient"]
rust-version = "1.70"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
serde_yaml = "0.9"
once_cell = "1.19"
unicode-normalization = "0.1"

# Proc-macro dependencies
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# Dev dependencies
pretty_assertions = "1.4"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"
