[package]
name = "tryparse"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Multi-strategy parser for messy real-world data. Handles broken JSON, markdown wrappers, and type mismatches."
license.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["parsing", "json", "llm", "flexible", "coercion"]
categories = ["parsing", "text-processing", "development-tools"]
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
regex.workspace = true
serde_yaml = { workspace = true, optional = true }
once_cell.workspace = true
unicode-normalization.workspace = true

# Optional: derive macro support
tryparse-derive = { version = "0.2.0", path = "../tryparse-derive", optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
criterion.workspace = true

[features]
default = ["yaml"]
yaml = ["serde_yaml"]
derive = ["tryparse-derive"]

[lib]
name = "tryparse"
path = "src/lib.rs"
